--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>gulimall-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <description>每一个微服务公共的依赖，bean，工具类等</description>
+    <description>每一个微服务公共的依赖，bean，工具类等test</description>
 
     <dependencies>
         <!--        mybatis-plus-->
